code/dark_gray/css/Eloquence_Dark_Gray.css
/* Punki's Variables */
@pale-gray-1: #2C2F33; /* Main background color */
@pale-gray-2: #23272A; /* Secondary background color */
@pale-gray-3: #23272A; /* Border color */
@gray-1: #CCCCCC; /* Text */
@gray-2: #CCCCCC; /* Text */
@blue-1: #99aab5; /* Link color and some accents */ 
@blue-2: #899CA9; /* Link hover color and most accents */ 
@white: #ffffff;
@banner-text: @white; /* Banner text color */
@decorative-font: 'Josefin Sans'; /* Large font */
@small-font: 'Raleway'; /* Smaller text font */
@banner-image-1: 'https://i.imgur.com/IAplz9f.jpg'; /* 950 pixels x 500 pixels for all four */
@seamless: 'https://raw.githubusercontent.com/sarcasticmoth/alostaff/master/images/background/dark/debut_dark.png'; /* Please make this a seamless aka tileable picture */
@about-picture: 'https://i.imgur.com/aV8Ax0v.jpg'; /* 350 pixels by 250 pixels */
@staff-picture: 'https://i.imgur.com/nuBTF2J.jpg'; /* 700 pixels by 100 pixels */
@awards-picture: 'https://i.imgur.com/IN0GQNX.jpg'; /* 50 pixels by 400 pixels */
@nav-picture: 'https://i.imgur.com/XRePE79.jpg'; /* 300 pixels by 50 pixels */
@credit-picture: 'https://i.imgur.com/EY9affx.jpg'; /* 500 pixels by 260 pixels */
@event-picture: 'https://i.imgur.com/F2RHdEy.jpg'; /* 290 pixels by 130 pixels */
@first-staffer: 'https://i.imgur.com/b9eQFO9.png'; /* 60 x 60 for all six */
@second-staffer: 'https://i.imgur.com/qFZ7dks.png';
@third-staffer: 'https://i.imgur.com/qOPYhm3.png';
@fourth-staffer: 'https://i.imgur.com/FQkt6ID.png';
@fifth-staffer: 'https://i.imgur.com/QDxpJU0.png';
@sixth-staffer: 'https://i.imgur.com/tF5WrIT.png';
@first-award: 'https://i.imgur.com/FYp1fIr.jpg'; /* 160 x 100 MOTM */
@second-award: 'http://placehold.it/160x100'; /* 160 x 100 TOTM */
@third-award: 'https://i.imgur.com/W9eflbp.jpg'; /* 160 x 100 COTM */
@fourth-award: 'http://placehold.it/160x100';
/* @default-board-image: 'https://i.imgur.com/V5QFAO7.jpg'; */
@default-board-image: 'https://i.imgur.com/V5QFAO7.jpg'; /* 300 pixels by 120 pixels */
@default-miniprofile-image: 'https://raw.githubusercontent.com/sarcasticmoth/alostaff/master/images/defaults/mini_profile_default_dark.jpg'; /* 250 pixels by 400 pixels */
@default-miniprofile-smaller-image: 'https://i.imgur.com/Thxg9xq.jpg'; /* 190 pixels by 100 pixels */

/* Punki's Styles */
#tooltip-span { display: none; padding: 5px; background: rgba(255,255,255,0.8); color: rgba(0,0,0,0.8); border: 1px solid @pale-gray-3; white-space: nowrap; letter-spacing: 1px; font-size: 10px; line-height: 10px; text-transform: uppercase; font-family: @small-font; position: fixed; z-index: 1000000; }
.user-avatar .avatar-wrapper, .user-avatar img { width: inherit; height: inherit; border-spacing: 0px; padding: 0; margin: 0; border-radius: inherit; }
#header { background: @pale-gray-2; border-top: 1px solid @pale-gray-3; padding: 0.4px; padding-top: 10px; }

.modal { display: none; width: 100%; background: rgba(255,255,255,0.6); position: fixed; z-index: 10000; }
#about { background: @pale-gray-1; overflow: hidden; z-index: 10000; position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 800px; height: 250px; max-width: 80%; max-height: 100%; display: none; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4); }
#about .picture { width: 350px; z-index: 100000; height: 100%; background-image: url(@about-picture); background-size: cover; background-position: center; float: left; }
#about .sayhi { line-height: 20px; padding-top: 30px; text-align: right; padding-right: 50px; text-transform: uppercase; letter-spacing: 1px; color: @gray-2; font-family: @small-font; font-size: 20px; }
#about .text { width: 580px; padding: 20px; height: 110px; background: @pale-gray-1; position: relative; top: -200px; z-index: 110000; float: right; margin-right: 50px; padding-right: 0px; font-size: 11px; line-height: 16px; text-align: justify; color: @gray-2; }
#staff { display: none; background: @pale-gray-1; z-index: 10000; position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%); width: 700px; height: 170px; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4); }
#staff .picture { height: 50px; text-align: center; word-spacing: 20px; background-image: url(@staff-picture); background-size: cover; background-position: cover; padding-top: 50px; }
#staff a { display: inline-block; width: 60px; height: 60px; border: 10px solid @pale-gray-1; }
#staff .staffer1 { background-image: url(@first-staffer); background-size: cover; background-position: center; }
#staff .staffer2 { background-image: url(@second-staffer); background-size: cover; background-position: center; }
#staff .staffer3 { background-image: url(@third-staffer); background-size: cover; background-position: center; }
#staff .staffer4 { background-image: url(@fourth-staffer); background-size: cover; background-position: center; }
#staff .staffer5 { background-image: url(@fifth-staffer); background-size: cover; background-position: center; }
#staff .staffer6 { background-image: url(@sixth-staffer); background-size: cover; background-position: center; }
#awards { width: 500px; height: 400px; padding-left: 100px; background: @pale-gray-1; position: fixed; top: 50%; left: 50%; transform: translate(-50%,-50%); z-index: 10000; display: none; box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.4); }
#awards .picture { width: 50px; height: 400px; background-image: url(@awards-picture); background-size: cover; background-position: center; float: left; margin-left: -50px; }
#awards table { width: 100%; border-spacing: 30px; height: 100%; border-collapse: separate; }
#awards .awardee { width: 180px; height: 30px; background: @pale-gray-2; font-family: @decorative-font; font-size: 10px; line-height: 36px; text-align: center; color: @gray-2; text-transform: uppercase; border-bottom: 1px solid @pale-gray-3; margin: auto; }
#awards a { display: block; width: 160px; height: 100px; border: 10px solid @pale-gray-2; margin: auto; }
/* ... */

